--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "homepage": "https://github.com/jblanquicett92/node-js-sequalize#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
